--- a/index.html
+++ b/index.html
@@ -2969,63 +2969,63 @@
                 </dd>
             </dl>
             <dl>
-                <dt>帮助中心</dt>
+                <dt>服务支持</dt>
                 <dd>
-                    <a href="javascript:;">账户管理</a>
+                    <a href="javascript:;">售后政策</a>
                 </dd>
                 <dd>
-                    <a href="javascript:;">购物指南</a>
+                    <a href="javascript:;">自助服务</a>
                 </dd>
                 <dd>
-                    <a href="javascript:;">订单操作</a>
-                </dd>
-            </dl>
-            <dl>
-                <dt>帮助中心</dt>
-                <dd>
-                    <a href="javascript:;">账户管理</a>
-                </dd>
-                <dd>
-                    <a href="javascript:;">购物指南</a>
-                </dd>
-                <dd>
-                    <a href="javascript:;">订单操作</a>
+                    <a href="javascript:;">相关下载</a>
                 </dd>
             </dl>
             <dl>
-                <dt>帮助中心</dt>
+                <dt>线下门店</dt>
                 <dd>
-                    <a href="javascript:;">账户管理</a>
+                    <a href="javascript:;">小米之家</a>
                 </dd>
                 <dd>
-                    <a href="javascript:;">购物指南</a>
+                    <a href="javascript:;">服务网点</a>
                 </dd>
                 <dd>
-                    <a href="javascript:;">订单操作</a>
-                </dd>
-            </dl>
-            <dl>
-                <dt>帮助中心</dt>
-                <dd>
-                    <a href="javascript:;">账户管理</a>
-                </dd>
-                <dd>
-                    <a href="javascript:;">购物指南</a>
-                </dd>
-                <dd>
-                    <a href="javascript:;">订单操作</a>
+                    <a href="javascript:;">零售网点</a>
                 </dd>
             </dl>
             <dl>
-                <dt>帮助中心</dt>
+                <dt>关于小米</dt>
                 <dd>
-                    <a href="javascript:;">账户管理</a>
+                    <a href="javascript:;">了解小米</a>
                 </dd>
                 <dd>
-                    <a href="javascript:;">购物指南</a>
+                    <a href="javascript:;">加入小米</a>
                 </dd>
                 <dd>
-                    <a href="javascript:;">订单操作</a>
+                    <a href="javascript:;">联系我们</a>
+                </dd>
+            </dl>
+            <dl>
+                <dt>关注我们</dt>
+                <dd>
+                    <a href="javascript:;">新浪微博</a>
+                </dd>
+                <dd>
+                    <a href="javascript:;">小米部落</a>
+                </dd>
+                <dd>
+                    <a href="javascript:;">官方微信</a>
+                </dd>
+            </dl>
+            <dl>
+                <dt>特色服务</dt>
+                <dd>
+                    <a href="javascript:;">F码通道</a>
+                </dd>
+                <dd>
+                    <a href="javascript:;">小米移动</a>
+                </dd>
+                <dd>
+                    <a href="javascript:;">防伪查询</a>
                 </dd>
             </dl>
             <div>
